adding to rithika branch

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -50,7 +50,7 @@
         <img src="Amit_Kumar_Agarwal_Nobroker_a8a279ad91.png">
         <h3>Amit Kumar Agarwal</h3>
         <p>Founder & CEO</p>
-        <a><img src="paytm.png" id="logo"></a>
+        <a><img src="paytm.png" id="logo"></a><img src="paytm.png" id="logo">
     </div>
 </div>
 
