--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -23,6 +23,9 @@
             align-items: center;
             padding-top: 2%;
         }
+    .logo{
+        height: 35px;
+    }
 
     </style>
 </head>
@@ -32,25 +35,51 @@
         <img src="Ankush_Sachdeva_Sharechat_4e44dbbe6b.png">
         <h3>Ankush Sachdeva</h3>
         <p>Co-Founder & CEO</p>
-        <a><img src="paytm.png" id="logo"></a>
+        <a><img src="paytm.png" class="logo"></a>
     </div>
     <div class="box">
         <img src="bhanu_pratap_singh_sharechat_11fdd7b47a.png">
         <h3>Bhanu Pratap Singh</h3>
         <p>Co-Founder & CTO</p>
-        <a><img src="paytm.png" id="logo"></a>
+        <a><img src="paytm.png" class="logo"></a>
     </div>
     <div class="box">
         <img src="farid_ahsan_sharechat_1251f28141.png">
         <h3>Farid Ahsan</h3>
         <p>Co-Founder & COO</p>
-        <a><img src="paytm.png" id="logo"></a>
+        <a><img src="paytm.png" class="logo"></a>
     </div>
     <div class="box">
         <img src="Amit_Kumar_Agarwal_Nobroker_a8a279ad91.png">
         <h3>Amit Kumar Agarwal</h3>
         <p>Founder & CEO</p>
-        <a><img src="paytm.png" id="logo"></a>
+        <a><img src="paytm.png" class="logo"></a>
+    </div>
+    
+
+    <div class="box">
+        <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Akhil_Gupta_Nobroker_539cd97f6c.jpg">
+        <h3>Akhil Gupta</h3>
+        <p>Founder & CTO</p>
+        <a><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/nobroker_rect_28c9778c30.svg" class="logo"></a>
+    </div>
+    <div class="box">
+        <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/saurbh_garg_nobroker_c0c71cc431.jpeg">
+        <h3>Saurabh Garg</h3>
+        <p>Co-Founder & CBO</p>
+        <a><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/nobroker_rect_28c9778c30.svg" class="logo"></a>
+    </div>
+    <div class="box">
+        <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Vipin_Pathak_Care24_acd02cd173.jpg">
+        <h3>Vipin Pathak</h3>
+        <p>Co-Founder & CEO</p>
+        <a><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/care24_1164f7a2cd.png" class="logo"></a>
+    </div>
+    <div class="box">
+        <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Ramakant_Sharma_livespace_0308e3627d.jpg">
+        <h3>Ramakant Sharma</h3>
+        <p>Founder</p>
+        <a><img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/livspace_f9318b2e8d.png" class="logo"></a>
     </div>
 </div>
 
