--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -35,28 +35,28 @@
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Vijay_Shekhar_Sharma_Paytm_96f52579b8.jpg" alt="image">
             <h3>Vijay Shekhar Sharma</h3>
             <p>Founder & CEO</p>
-            <a href="https://paytm.com/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_rect_06df45a24f.svg" alt="paytm"></a>
+            <a href="https://paytm.com/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/paytm_rect_06df45a24f.svg" alt="paytm" class="logo"></a>
         </div>
 
         <div class="box">
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Rectangle_427_637d69bb57.png" alt="image">
             <h3>Kunal Shah</h3>
             <p>Founder</p>
-            <a href="https://cred.club/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/cred_0a47d7b4f8.png" alt="paytm"></a>
+            <a href="https://cred.club/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/cred_0a47d7b4f8.png" alt="paytm" class="logo"></a>
         </div>
 
         <div class="box">
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/amrish_rau_pine_labs_144e5e587c.jpg" alt="image">
             <h3>Amrish Rau</h3>
             <p>CEO</p>
-            <a href="https://www.pinelabs.my/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pine_labs_0aa2407434.png" alt="paytm"></a>
+            <a href="https://www.pinelabs.my/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/pine_labs_0aa2407434.png" alt="paytm" class="logo"></a>
         </div>
 
         <div class="box">
             <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/Sampad_swain_Instamojo_f12bf6341e.jpg" alt="image">
             <h3>Sampad Swain</h3>
             <p>Co-Founder & CEO</p>
-            <a href="https://www.instamojo.com/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/instamojo_8763e704f7.png" alt="paytm"></a>
+            <a href="https://www.instamojo.com/"> <img src="https://masai-website-images.s3.ap-south-1.amazonaws.com/instamojo_8763e704f7.png" alt="paytm" class="logo"></a>
         </div>
 
     <div class="box">
